test/corpus/declarations.txt
=================
Include statement
=================

include "filename"

---

(source_file
	(include_statement (string (string_text_fragment))))

==========================
Device support declaration
==========================

device(ai,CONSTANT,devAiSoft,"Soft Channel")
device(ai,VME_IO,devAiXy566Se,"XYCOM-566 SE Scanned")

---

(source_file
	(device_support_declaration
		record_type: (record_type (word))
		link_type: (word)
		dset_name: (word)
		choice: (string (string_text_fragment)))
	(device_support_declaration
		record_type: (record_type (word))
		link_type: (word)
		dset_name: (word)
		choice: (string (string_text_fragment))))

==================
Driver declaration
==================

driver(drvVxi)
driver(drvXy210)

---

(source_file
	(driver_declaration name: (word))
	(driver_declaration name: (word)))

================
Link declaration
================

link(debug, lnkDebugIf)

---

(source_file
	(link_declaration name: (word) jlif_name: (word)))

=====================
Registrar declaration
=====================

registrar(myRegistrar)

---

(source_file
	(registrar_declaration name: (word)))

====================
Variable declaration
====================

variable(myParameter)
variable(myParameter, double)

---

(source_file
	(variable_declaration name: (word))
	(variable_declaration name: (word) type: (word)))

====================
Function declaration
====================

function(myFunction)

---

(source_file
	(function_declaration name: (word)))


================
Breakpoint table
================

breaktable(typeJdegC) {
    0.000000 0.000000
    365.023224 67.000000
    1000.046448 178.000000
    3007.255859 524.000000
    3543.383789 613.000000
    4042.988281 692.000000
    4101.488281 701.000000
}

---

(source_file
	(breakpoint_table
		name: (word)
		(breakpoint_item raw_value: (number) eng_value: (number))
		(breakpoint_item raw_value: (number) eng_value: (number))
		(breakpoint_item raw_value: (number) eng_value: (number))
		(breakpoint_item raw_value: (number) eng_value: (number))
		(breakpoint_item raw_value: (number) eng_value: (number))
		(breakpoint_item raw_value: (number) eng_value: (number))
		(breakpoint_item raw_value: (number) eng_value: (number))))
