test/corpus/records.txt
============
Empty record
============

# Hello

record(ao, "name") {
}

---

(source_file
	(comment)
	(record_instance
		type: (record_type (word))
		name: (record_name (string (string_text_fragment)))))

==============
Simpler record
==============

record(ao, "name") {
	field(DESC, "description")
}

---

(source_file
	(record_instance
		type: (record_type (word))
		name: (record_name (string (string_text_fragment)))
		(field
			name: (field_name (word))
			value: (string (string_text_fragment)))))

=============
Simple record
=============

record(ao, "name") {
	field(DESC, "description")
	field(ZNAM, "zero name")
}

---

(source_file
	(record_instance
		type: (record_type (word))
		name: (record_name (string (string_text_fragment)))
		(field
			name: (field_name (word))
			value: (string (string_text_fragment)))
		(field
			name: (field_name (word))
			value: (string (string_text_fragment)))))

==============
Example record
==============

record(record_type, record_name) {
    alias(alias_name)
    field(field_name, "field_value")
    info(info_name, "info_value")
}

---

(source_file
	(record_instance
		type: (record_type (word))
		name: (record_name (word))
		(alias alias_name: (record_name (word)))
		(field
			name: (field_name (word))
			value: (string (string_text_fragment)))
		(info
			name: (word)
			value: (string (string_text_fragment)))))

============
Empty record
============

record(record_type, record_name1) {}

record(record_type, record_name2)

record(record_type, record_name3) {}

---

(source_file
	(record_instance
		type: (record_type (word))
		name: (record_name (word)))
	(record_instance
		type: (record_type (word))
		name: (record_name (word)))
	(record_instance
		type: (record_type (word))
		name: (record_name (word))))

===================
Record with numbers
===================

record(record_type, record_name) {
    field(field_name, 42)
    field(field_name, -42)
    field(field_name, -42.5)
    field(field_name, 0x54)
    field(field_name, 0x54.2p4)
    field(field_name, NAN)
}

---

(source_file
	(record_instance
		type: (record_type (word))
		name: (record_name (word))
		(field name: (field_name (word)) value: (number))
		(field name: (field_name (word)) value: (number))
		(field name: (field_name (word)) value: (number))
		(field name: (field_name (word)) value: (number))
		(field name: (field_name (word)) value: (number))
		(field name: (field_name (word)) value: (number))))

================
Record with JSON
================

record(record_type, record_name) {
    field(field_name, {const: 3.14159265358979})
    field(field_name, {const: ["One", "e", "Pi"]})
    field(field_name, {const:"Inf"})
    field(field_name, {calc: {expr:"A*B", args:[{db:"record.VAL"}, 1.5], prec:3}})
}

---

(source_file
	(record_instance
		type: (record_type (word))
		name: (record_name (word))
		(field name: (field_name (word)) value: (json_value))
		(field name: (field_name (word)) value: (json_value))
		(field name: (field_name (word)) value: (json_value))
		(field name: (field_name (word)) value: (json_value))))
