test/corpus/strings.txt
====================
Simple quoted string
====================

function("name")

---

(source_file
	(function_declaration
		name: (string (string_text_fragment))))

======================
Simple unquoted string
======================

function(name)
function(name-with:<speci4l>;[Chars]+.)

---

(source_file
	(function_declaration
		name: (word))
	(function_declaration
		name: (word)))

================
Escape sequences
================

function("\\\n\"hello\\\$(world)\'\a\b\123\xFe\\")

---

(source_file
	(function_declaration
		name: (string
			(escape_sequence)
			(escape_sequence)
			(escape_sequence)
			(string_text_fragment)
			(escape_sequence)
			(escape_sequence)
			(string_text_fragment)
			(escape_sequence)
			(escape_sequence)
			(escape_sequence)
			(escape_sequence)
			(escape_sequence)
			(escape_sequence))))
